--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dev-dependencies = [
     "black>=24.1.1",
     "isort>=5.13.2",
     "eliot-tree>=21.0.0",
+    "openapi-generator>=1.0.6",
 ]
 
 [tool.hatch.metadata]
